# gymOs

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build-windows.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  create_icons.py  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: attendance.rs  auth.rs  backup.rs  email.rs  expenses.rs  mod.rs  payments.rs  plans.rs  reports.rs  students.rs
src-tauri/src/database/: migrations.rs  mod.rs
src-tauri/src/models/: expense.rs  mod.rs  payment.rs  plan.rs  student.rs  user.rs
src/components/layout/: Layout.tsx  Sidebar.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  ConfirmDialog.tsx  EmptyState.tsx  Input.tsx  Modal.tsx  SearchInput.tsx  Select.tsx  Spinner.tsx  Textarea.tsx
src/pages/attendance/: Attendance.tsx
src/pages/auth/: Login.tsx
src/pages/dashboard/: Dashboard.tsx
src/pages/expenses/: ExpenseForm.tsx  Expenses.tsx
src/pages/payments/: PaymentForm.tsx  Payments.tsx
src/pages/plans/: PlanForm.tsx  Plans.tsx
src/pages/reports/: Reports.tsx
src/pages/settings/: Settings.tsx
src/pages/students/: StudentDetail.tsx  StudentForm.tsx  Students.tsx
src/services/: auth.ts  email.ts  expenses.ts  misc.ts  payments.ts  plans.ts  reports.ts  students.ts
src/store/: authStore.ts  expensesStore.ts  paymentsStore.ts  plansStore.ts  studentsStore.ts
src/types/: index.ts
src/utils/: cn.ts  dateUtils.ts  excelExporter.ts  formatters.ts  pdfGenerator.ts
