[package]
name = "gym-os"
version = "0.1.0"
description = "GymOS - Sistema de Administración de Deportivo de Calistenia"
authors = []
license = ""
repository = ""
edition = "2021"

[lib]
name = "gym_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
lettre = { version = "0.11", features = ["smtp-transport", "native-tls", "builder"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
thiserror = "1"

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
